# WomenInTech

./: .env.example  .gitignore  README.md  WYNIKI.md  langgraph.json  pyproject.toml  requirements.txt
agent_langgraph/: README.md  graph.md  graph.py  main.py
agent_linear/: README.md  main.py  pipeline.py
agent_planner/: README.md  graph.md  graph.py  main.py  state.py
baseline/: README.md  __main__.py  baseline.py  eval.py  llm_call.py  main.py  prompts.py
data/: README.md  eval.json
langgraph_agent/: README.md  graph.py  main.py  state.py
linear_agent/: README.md  pipeline.py
notebooks/: baseline_and_eval.ipynb  baseline_walkthrough.ipynb  eval_walkthrough.ipynb  linear_walkthrough.ipynb  planner_walkthrough.ipynb  setup.ipynb  setup.py  walkthrough.ipynb
presentation/: README.md
src/: cost.py  descriptions.py  eval.py  llm.py  loader.py  output.py  sources.py  tokens.py
src/eval/: README.md  compare.py  coverage.py  grounding.py  quality.py  repeat.py  report.py
src/skills/: README.md
src/skills/document/: main.py  prompts.py  schemas.py
src/skills/file_description/: main.py  prompts.py  schemas.py
src/skills/make_task/: main.py  prompts.py  schemas.py
src/skills/planner/: main.py  prompts.py  schemas.py
src/skills/strategy/: main.py  prompts.py  schemas.py
src/skills/tasks/: main.py  prompts.py  schemas.py
