[project]
name = "womenintech"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.15.1",
    "langgraph>=1.2.4",
    "openai>=2.41.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.27",
]
